19_AWS_demo_VPC_VIP_EC2/09_eni_for_vip.tf
resource "aws_network_interface" "demo19_vip" {
  subnet_id       = aws_subnet.demo19_public.id
  private_ips     = [var.websrv_private_ip_vip]
  security_groups = [aws_security_group.demo19_sg_vip.id]

  attachment {
    instance     = aws_instance.demo19_websrv[var.websrv_vip_owner - 1].id
    device_index = 1
  }
}

resource "aws_eip" "demo19_vip" {
  network_interface = aws_network_interface.demo19_vip.id
  domain            = "vpc"
  tags              = { Name = "demo19-bastion" }
}

# ------ Create a security group
resource "aws_security_group" "demo19_sg_vip" {
  name        = "demo19-sg-vip"
  description = "Description for demo19-sg-vip"
  vpc_id      = aws_vpc.demo19.id
  tags        = { Name = "demo19-sg-vip" }

}


resource "aws_vpc_security_group_ingress_rule" "demo19_sg_vip_ingress_http_0" {
  count             = length(var.authorized_ips)
  security_group_id = aws_security_group.demo19_sg_vip.id
  description       = "allow HTTP access from authorized IPs"
  from_port         = 80
  to_port           = 80
  ip_protocol       = "tcp"
  cidr_ipv4         = var.authorized_ips[count.index]
  tags              = { Name = "demo19_sg_vip-sgr-ingress-http-0" }
}
